NetBSD Problem Report #50621

From www@NetBSD.org  Mon Jan  4 15:39:23 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 14A347ABF7
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  4 Jan 2016 15:39:23 +0000 (UTC)
Message-Id: <20160104153921.E8C1F7ACA8@mollari.NetBSD.org>
Date: Mon,  4 Jan 2016 15:39:21 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: sys/dev/i2c/adm1021.c:238: read uninit local data ?
X-Send-Pr-Version: www-1.0

>Number:         50621
>Category:       kern
>Synopsis:       sys/dev/i2c/adm1021.c:238: read uninit local data ?
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jan 04 15:40:00 +0000 2016
>Closed-Date:    Mon Jan 04 22:32:28 +0000 2016
>Last-Modified:  Mon Jan 04 22:32:28 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160104
>Organization:
>Environment:
>Description:
[sys/dev/i2c/adm1021.c:238]: (error) Uninitialized variable: data

Source code is

        if (iic_exec(sc->sc_tag, I2C_OP_READ_WITH_STOP, sc->sc_addr,
            &cmd, sizeof cmd, &comp, sizeof comp, 0) == 0 &&
            data != ADMTEMP_LOW_DEFAULT) {

Maybe better code

        if (iic_exec(sc->sc_tag, I2C_OP_READ_WITH_STOP, sc->sc_addr,
            &cmd, sizeof cmd, &comp, sizeof comp, 0) == 0 &&
            comp != ADMTEMP_LOW_DEFAULT) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50621 CVS commit: src/sys/dev/i2c
Date: Mon, 4 Jan 2016 14:24:15 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Jan  4 19:24:15 UTC 2016

 Modified Files:
 	src/sys/dev/i2c: adm1021.c

 Log Message:
 PR/50621: David Binderman: Wrap iic_exec() in a simpler utility function
 and fix all the pointer/sizeof botches in the proces.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/dev/i2c/adm1021.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 04 Jan 2016 22:32:28 +0000
State-Changed-Why:
christos fixed it, thanks for the report!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.