PR/50621: David Binderman: Wrap iic_exec() in a simpler utility function and fix all the pointer/sizeof botches in the proces.